--- a/workspace/html/index.html
+++ b/workspace/html/index.html
@@ -3,8 +3,17 @@
 	<main class="container_wrap">
 		@@include('../include/control.html')
 		@@include('../include/navigation.html')
+		@@include('../include/lnb_introduce.html')
+		@@include('../include/lnb_floor.html')
+		@@include('../include/lnb_traffic.html')
 
-		<iframe src="iframe/main.html" frameborder="0" width="100%" height="100%"></iframe>
+		<iframe id="iframe_content"
+		        src="iframe/main.html"
+		        frameborder="0"
+		        width="100%"
+		        height="100%"
+		        style="border: 1px solid;"
+		></iframe>
 	</main>
 	@@include('../include/sideBox.html')
 </div>
